@@ -99,16 +99,6 @@ class <class> extends AB_Model
     }
 
     /**
-     * Save model
-     *
-     * @return  boolean
-     */
-    public function save()
-    {
-        return parent::_save(self::\$sequence_name);
-    }
-
-    /**
      * Find <class> with an encapsulated SELECT command
      *
      * @param   array   \$conditions WHERE parameters
